--- a/_i18n/i18n.properties
+++ b/_i18n/i18n.properties
@@ -193,3 +193,7 @@ distancesUnit=Distances Unit
 weightUnit=Weight Unit
 #XTIT: Name
 unitCode=Unit Code
+#XTIT: Name
+areaUnit=Area Unit
+#XTIT: Name
+volumeUnit=Volume Unit
