--- a/_i18n/i18n.properties
+++ b/_i18n/i18n.properties
@@ -38,7 +38,8 @@ language=Language
 languageCode=Language Code
 #XTIT: Name
 languages=Languages
-
+#XTIT: Name
+enabled=Enabled
 
 
 
@@ -124,15 +125,25 @@ faxNumber=Fax Number
 #XTIT: Name
 contentSource=Content Source
 #XTIT: Name
+contentSources=Content Sources
+#XTIT: Name
 contentSourceCode=Content Source Code
 #XTIT: Name
 contentAction=Content Action
+#XTIT: Name
+contentActions=Content Actions
 #XTIT: Name
 contentActionCode=Content Action Code
 #XTIT: Name
 contentFeed=Content Feed
 #XTIT: Name
+contentFeeds=Content Feeds
+#XTIT: Name
 contentFeedCode=Content Feed
+#XTIT: Name
+processorReturnCode=Processor Return Code
+#XTIT: Name
+processorReturnDescription=Processor Return Description
 
 
 
