--- a/_i18n/i18n.properties
+++ b/_i18n/i18n.properties
@@ -208,3 +208,28 @@ unitCode=Unit Code
 areaUnit=Area Unit
 #XTIT: Name
 volumeUnit=Volume Unit
+
+
+#----------------------------------------------------------------------------------------------------------------------
+#Carrier
+#----------------------------------------------------------------------------------------------------------------------
+#XTIT: Name
+carrier=Carrier
+#XTIT: Name
+referenceCarrier=Reference Carrier
+#XTIT: Name
+service=Service
+#XTIT: Name
+referenceService=Reference Service
+#XTIT: Name
+modeoftransport=Mode Of Transport
+#XTIT: Name
+serviceType=Service Type
+#XTIT: Name
+serviceSubType=Service Subtype
+#XTIT: Name
+daysInTransitType=Days In Transit Type
+#XTIT: Name
+commitmentTimeType=Commitment Time Type
+#XTIT: Name
+carrierActionType=Carrier Action Type
